refactor: new fields on user table and services

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -4,7 +4,7 @@
   "port": 5432,
   "username": "postgres",
   "password": "docker",
-  "database": "game_rank",
+  "database": "kenziehub",
   "entities": ["./src/modules/**/infra/typeorm/entities/*.ts"],
   "migrations": ["./src/shared/infra/typeorm/migrations/*.ts"],
   "cli": {
