--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
+    "aws-sdk": "^2.798.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.3.1",
     "eslint-import-resolver-typescript": "^2.3.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^2.4.6",
     "multer": "^1.4.2",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
