config: .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,10 @@
-
-// dev
-STORAGE_DRIVER=disk
+# Application
+APP_SECRET=
 APP_API_URL=http://localhost:3333
+
+# Storage
+STORAGE_DRIVER=s3 || disk
+
+# AWS Credentials
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
