config: ormconfig.json uploaded for production

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,9 +5,9 @@
   "username": "postgres",
   "password": "docker",
   "database": "kenziehub",
-  "entities": ["./src/modules/**/infra/typeorm/entities/*.ts"],
-  "migrations": ["./src/shared/infra/typeorm/migrations/*.ts"],
+  "entities": ["./dist/modules/**/infra/typeorm/entities/*.js"],
+  "migrations": ["./dist/shared/infra/typeorm/migrations/*.js"],
   "cli": {
-    "migrationsDir": "./src/shared/infra/typeorm/migrations"
+    "migrationsDir": "./dist/shared/infra/typeorm/migrations"
   }
 }
