feature: works module with CRUD done. Missing unit tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
   ],
   "rules": {
     "no-unused-vars": "off",
+    "no-unused-expressions": "off",
     "class-methods-use-this": "off",
     "import/extensions": [
       "off",
