--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-typescript": "^7.12.7",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.9",
     "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.0",
@@ -43,6 +44,7 @@
     "aws-sdk": "^2.798.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.3.1",
+    "cors": "^2.8.5",
     "eslint-import-resolver-typescript": "^2.3.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
