--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/multer": "^1.4.4",
+    "@types/node": "^18.7.6",
     "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.9",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
